Fix lint errors.