@@ -59,16 +59,16 @@ public abstract class AbstractPersistedStateActivity extends Activity {
 		try {
 			reader = new BufferedReader(new InputStreamReader(openFileInput(getStateFilename())));
 
-			int versionCode = new Integer(reader.readLine());
+			int versionCode = Integer.valueOf(reader.readLine());
 			if (versionCode != getVersionCode())
 				return;
 
 			String line;
 			while ((line = reader.readLine()) != null) {
 				String[] fields = line.split("=", 2);
-				View view = findViewById(new Integer(fields[0]));
+				View view = findViewById(Integer.valueOf(fields[0]));
 				if (view != null && view instanceof CompoundButton) {
-					((CompoundButton) view).setChecked(new Boolean(fields[1]));
+					((CompoundButton) view).setChecked(Boolean.valueOf(fields[1]));
 				}
 			}
 
